# abcpwn

./: .clang-format  .clang-tidy  .cppcheck-suppress  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .shellcheckrc  BUILDING.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-THIRD-PARTY.md  README.md  SECURITY.md  vcpkg-configuration.json  vcpkg.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  fuzz.yml  release.yml  sanitizers.yml  semgrep.yml
benchmarks/: CMakeLists.txt  bench_disasm.cpp  bench_gadget.cpp  bench_info.cpp  bench_libc_id.cpp  bench_paths.hpp.in
benchmarks/baselines/: v0.1.0.json
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  Docs.cmake  Hardening.cmake  Platform.cmake  Sanitizers.cmake  version.hpp.in
cmake/modules/: FindKeystone.cmake
completions/: _abcpwn  abcpwn.bash  abcpwn.fish
docs/: ARCHITECTURE.md  CI.md  COMMANDS.md  ERROR_CODES.md  FAQ.md  PERFORMANCE.md  ROADMAP.md  SECURITY-MODEL.md  STATIC_ANALYSIS.md  SUPPORT.md  TUTORIALS.md
docs/adr/: 0001-record-architecture-decisions.md  0002-cpp20-as-language-target.md  0003-lief-for-binary-parsing.md  0004-dual-build-for-keystone.md  0005-no-emoji-policy.md  0006-no-network-by-default.md  0007-vcpkg-manifest-mode.md  0008-cli11-for-cli-parsing.md  0009-spdlog-for-logging.md
include/abcpwn/arch/: arch.hpp  asm.hpp  disasm.hpp  syscalls.hpp
include/abcpwn/commands/: aslr_bypass.hpp  asm_cmd.hpp  b64.hpp  constgrep.hpp  cyclic.hpp  diff.hpp  disasm.hpp  dynelf.hpp  encoding.hpp  errno_cmd.hpp  fmt.hpp  gadget.hpp  got.hpp  hash.hpp  heap.hpp  hex.hpp  info.hpp  iofile.hpp  libc.hpp  one_gadget.hpp  pack.hpp  patch.hpp  phd.hpp  pwn.hpp  pwninit.hpp  ret2dl.hpp  rop.hpp  rop_search.hpp  safe_link.hpp  search.hpp  seccomp.hpp  shellcode.hpp  signal_cmd.hpp  srop.hpp  strings.hpp  syms.hpp  template_cmd.hpp  vtable.hpp  xor_cmd.hpp
include/abcpwn/core/: command.hpp  config.hpp  context.hpp  error.hpp  progress.hpp  result.hpp  safe_io.hpp  signal.hpp  validate.hpp
include/abcpwn/formats/: binary_loader.hpp  elf.hpp  macho.hpp  pe.hpp
include/abcpwn/output/: banner.hpp  json_writer.hpp  log.hpp  markers.hpp  pretty.hpp
man/: abcpwn.1.md
scripts/: check-all.sh  check-coverage.py  check-format.sh  check-no-attribution.sh  check-no-emoji.sh  check-no-spec-leak.sh  check-no-system.sh  check-no-telemetry.sh  check-shellcheck.sh  check-spdx.sh  check-urls.sh  install.sh  verify-release.sh  verify-symbols.sh
src/: CMakeLists.txt  main.cpp
src/arch/: arch.cpp  asm.cpp  disasm.cpp  syscalls.cpp
src/commands/: aslr_bypass.cpp  asm_cmd.cpp  b64.cpp  constgrep.cpp  cyclic.cpp  diff_patch.cpp  disasm.cpp  dynelf.cpp  encoding.cpp  errno_cmd.cpp  fmt.cpp  gadget.cpp  got.cpp  hash.cpp  heap.cpp  hex.cpp  info.cpp  iofile.cpp  libc.cpp  one_gadget.cpp  pack.cpp  phd.cpp  pwn.cpp  pwninit.cpp  ret2dl.cpp  rop.cpp  rop_search.cpp  safe_link.cpp  search.cpp  seccomp.cpp  shellcode.cpp  shellcode_db.cpp  signal_cmd.cpp  srop.cpp  strings.cpp  syms.cpp  template_cmd.cpp  vtable.cpp  xor_cmd.cpp
src/core/: build_marker.cpp  config.cpp  progress.cpp  safe_io.cpp  signal.cpp
src/formats/: binary_loader.cpp
src/output/: banner.cpp  json_writer.cpp  log.cpp  pretty.cpp
tests/: CMakeLists.txt
tests/fixtures/: generate_fixtures.sh
tests/fixtures/binaries/: hello-hardened  hello-stripped  scanf-fixture
tests/fuzz/: CMakeLists.txt  fuzz_binary_loader.cpp  fuzz_fmt_parser.cpp  fuzz_gadget_filter.cpp  fuzz_seccomp_decoder.cpp
tests/fuzz/seeds/fmt_parser/: dump  fmt-leak-template
tests/fuzz/seeds/gadget_filter/: x86_64-three-gadgets
tests/fuzz/seeds/seccomp_decoder/: sh-allow
tests/integration/: CMakeLists.txt  test_about_network.sh  test_cli_exit_codes.sh  test_corrupt_elf.sh  test_cyclic_large_n.sh  test_cyclic_limits.sh  test_disasm_gadget_caps.sh  test_docs.sh  test_docs_flags.sh  test_enum_validation.sh  test_error_format.sh  test_exit_codes.sh  test_fmt_leak_flow.cpp  test_got_plt.sh  test_heap_flow.cpp  test_installer.sh  test_log_file.sh  test_max_file_size.sh  test_no_network.cpp  test_no_stdout_pollution.sh  test_pwn_not_implemented.sh  test_readme_quickstart.sh  test_ret2libc_flow.cpp  test_ret2win_flow.cpp  test_rop_multipop.sh  test_search_vaddr.sh  test_seccomp_dump.sh  test_seccomp_flow.cpp  test_shellcode_executes.cpp  test_signal_handling.cpp  test_stdin.sh  test_syms_static.sh  test_tutorial_walkthrough.sh  test_verbosity.sh  test_version_output.sh
tests/snapshots/: banner.txt
tests/unit/: CMakeLists.txt  test_asm.cpp  test_banner.cpp  test_binary_loader.cpp  test_context.cpp  test_disasm.cpp  test_encoding.cpp  test_fmt.cpp  test_got.cpp  test_heap.cpp  test_iofile_vtable.cpp  test_json_writer.cpp  test_log.cpp  test_paths.hpp.in  test_phd_cyclic.cpp  test_pretty.cpp  test_progress.cpp  test_recon.cpp  test_rop.cpp  test_safe_io.cpp  test_sandbox_libc.cpp  test_shellcode.cpp  test_specialized.cpp  test_workflow.cpp
